syntax = "proto3";

package OrderService;
import "google/protobuf/empty.proto";

service OrderService {
  rpc Commit(CommitRequest) returns(CommitResponse) {}
  rpc Rollback(RollbackRequest) returns(google.protobuf.Empty) {}
  rpc Prepare(PrepareRequest) returns(PrepareResponse) {}
}

message PrepareRequest {
  int32 product_id = 1;
  string transaction_id = 2;
  int32 user_id = 3;
  double price = 4;
}

message PrepareResponse {
  bool is_commit_ready = 1;
}

message CommitRequest {
  string transaction_id = 1;
}

message CommitResponse {
  bool is_success = 1;
}

message RollbackRequest {
  string transaction_id = 1;
}